Misc. code cleaning